--- a/ui-kit/package.json
+++ b/ui-kit/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "talentedunicorn-ui-kit",
-  "version": "0.1.9",
+  "name": "fave-ui-kit",
+  "version": "0.1.0",
   "main": "dist/prod/index.js",
   "module": "dist/prod/index.js",
   "files": ["dist", "README.md", "package.json"],
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/talentedunicorn/react-ui-kit"
+    "url": "https://github.com/kfit-dev/react-ui-kit"
   },
   "scripts": {
     "prePublishOnly": "npm run release",
